--- a/templates/deficiencies/mcdefdet.html
+++ b/templates/deficiencies/mcdefdet.html
@@ -68,6 +68,24 @@
 
 <div class="row center">
     <div class="col center2">
+
+        {% if user.is_authenticated %}
+        {%if user.is_superuser == 1%}
+        <form method="POST" action="{%url 'MCExcelImport' object.pk %}" enctype="multipart/form-data">
+            {% csrf_token %}
+         
+            <div
+             class="row center">
+                
+                            <input type="file" name="myfile" class="form-control">
+                                     <button type="submit" class="btn btn-success" >Upload data</button> 
+                                        
+                                    
+                        </div>
+          </form> 
+          {%endif%}
+          {%endif%}
+
         <form method="POST" action="{%url 'addMCremark' object.pk %}">
             {% csrf_token %}
             <h3 style="color:black; font-family:sans-serif; font-style:italic"> Add New Deficiency</h3>
