--- a/templates/deficiencies/dpcdefdet.html
+++ b/templates/deficiencies/dpcdefdet.html
@@ -10,18 +10,35 @@
 <div class="center">
     <h1>Deficiencies Report of {{ object.DPCName }}. POH Date {{ object.POHDate}} . DPC-ID: {{object.id}}</h1>
     </div>
-<div class="center">
+<div class="overflow-auto w-100 h-10 center3">
+    <table class="table table-bordered ">
+        <thead>
+            <tr>
+                <th>
     <form method="POST" action="{%url 'DPCChartBySection' object.id %}" >
         {% csrf_token %}
         <input type="submit" value="Sort By Section" class="btn btn-primary custom-btn" >
       </form>
+    </th>
+    <th>
       <form method="POST" action="{%url 'DPCChartByArea' object.id%}" >
         {% csrf_token %}
         <input type="submit" value="Sort By Category" class="btn btn-primary custom-btn" >
       </form>
-    
+    </th>
+    <th>
+      <form method="POST" action="{%url 'DPCExcelExport' object.id %}" >
+        {% csrf_token %}
+        <input type="submit" value="Excel Export" class="btn btn-primary custom-btn" >
+      </form>
+    </form>
+</th>
+</tr>
+  </thead>
+</table>
 </div>
-    
+
+{%if DPC%}
 <canvas  id="myChart" width="40" height="16"></canvas>
 </div>
 <script>
@@ -62,6 +79,7 @@
     });
 </script>
 
+{%endif%}
 
 
 <div class="row center">
