--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -14,7 +14,7 @@ Home
 <div class="container-fluid">
     <div class="row" style="background-color: teal;" style="overflow-x:auto;">
         <div class="">
-            <h3 class="text-dark">Stats Test </h3>
+            <h3 class="text-dark">Stats </h3>
             <hr>
 
         </div>
