--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -71,6 +71,80 @@ Home
                 
                 
                 </tbody>
+
+                <tbody>
+                
+                    <tr>
+                        <th>No. of Attended Remarks about DPC in Master</th>
+                        <th>No. of Attended Remarks about TC in Master</th>
+                        <th>No. of Attended Remarks about MC in Master</th>
+                       
+                    </tr>
+                    <tr class='danger'>
+                        <td class='text-primary'>{{l}}</td>
+                        <td class='text-primary'>{{m}}</td>
+                        <td class='text-primary'>{{n}}</td>
+                        
+                
+                    </tr>
+                
+                
+                </tbody>
+
+                <tbody>
+                
+                    <tr>
+                        <th>No. of Not Attended Remarks about DPC in Master</th>
+                        <th>No. of Not Attended Remarks about TC in Master</th>
+                        <th>No. of Not Attended Remarks about MC in Master</th>
+                       
+                    </tr>
+                    <tr class='danger'>
+                        <td class='text-primary'>{{o}}</td>
+                        <td class='text-primary'>{{p}}</td>
+                        <td class='text-primary'>{{q}}</td>
+                        
+                
+                    </tr>
+                
+                
+                </tbody><tbody>
+                
+                    <tr>
+                        <th>No. of Material Unavailability Remarks about DPC in Master</th>
+                        <th>No. of Material Unavailability Remarks about TC in Master</th>
+                        <th>No. of Material Unavailability Remarks about MC in Master</th>
+                       
+                    </tr>
+                    <tr class='danger'>
+                        <td class='text-primary'>{{r}}</td>
+                        <td class='text-primary'>{{s}}</td>
+                        <td class='text-primary'>{{t}}</td>
+                        
+                
+                    </tr>
+                
+                
+                </tbody>
+
+                <tbody>
+                
+                    <tr>
+                        <th>No. of Temporarily Attended Remarks about DPC in Master</th>
+                        <th>No. of Temporarily Attended Remarks about TC in Master</th>
+                        <th>No. of Temporarily Attended Remarks about MC in Master</th>
+                       
+                    </tr>
+                    <tr class='danger'>
+                        <td class='text-primary'>{{u}}</td>
+                        <td class='text-primary'>{{v}}</td>
+                        <td class='text-primary'>{{w}}</td>
+                        
+                
+                    </tr>
+                
+                
+                </tbody>
                 
             </table>
         </div>
