--- a/templates/charts/chartshome.html
+++ b/templates/charts/chartshome.html
@@ -25,17 +25,33 @@ Home
                             });
                         });
                     </script>
-                    <input type="text" name="datepicker" style="background-color: white; color:black" placeholder="To"
-                        aria-label="To" id="datepicker">
+                    <input type="text" name="datepicker2" style="background-color: white; color:black" placeholder="To"
+                        aria-label="To" id="datepicker2">
                 
                     <script>
                         $(function () {
-                            $("#datepicker").datepicker({
+                            $("#datepicker2").datepicker({
                                 dateFormat: "yy-mm-dd"
                             });
                         });
                     </script>
-                    <input type="submit" value="DPC" style="background-color: lightcoral; color:black" />
+                    <br>
+                    <input type="text" id="DPCPart" name="DPCPart" style="background-color: white; color:black" placeholder="Category"
+                aria-label="Category" />
+                <script>
+                    $("#DPCPart").autocomplete({
+                        source: '{%url 'partAutocomplete'%}'
+                                    });
+                </script>
+                <input type="text" id="DPCDef" name="DPCDef" style="background-color: white; color:black" placeholder="Section"
+                aria-label="Section" />
+                <script>
+                    $("#DPCDef").autocomplete({
+                        source: '{%url 'defAutocomplete'%}'
+                                        });
+                </script>
+                <br>
+                    <input type="submit" value="DPC Search" style="background-color: lightcoral; color:black" />
                 </form>
                     </th>
                 <th><form style="background-color:rgb(30, 144, 255); color:rgb(0, 0, 0); font-weight: 500; font-size: 12px; margin-right:0px; margin-top:5px;" method="POST" action="{%url 'tcchart'%}">
@@ -83,8 +99,8 @@ Home
                     method="POST" action="{%url 'mcchart'%}">
                     
                     {% csrf_token %}
-                    <input type="text" name="datepicker5" style="background-color: white; color:black" placeholder="From"
-                        aria-label="From" id="datepicker5">
+                    <input type="text" name="datepicker5" style="background-color: white; color:black" placeholder="From*"
+                        aria-label="From*" id="datepicker5">
                     <script>
                         $(function () {
                             $("#datepicker5").datepicker({
@@ -92,7 +108,7 @@ Home
                             });
                         });
                     </script>
-                    <input type="text" name="datepicker6" style="background-color: white; color:black" placeholder="To" aria-label="To"
+                    <input type="text" name="datepicker6" style="background-color: white; color:black" placeholder="To*" aria-label="To*"
                         id="datepicker6">
                 
                     <script>
@@ -102,7 +118,23 @@ Home
                             });
                         });
                     </script>
-                    <input type="submit" value="MC" style="background-color: lightcoral; color:black" />
+                    <br>
+                    <input type="text" id="MCPart" name="MCPart" style="background-color: white; color:black" placeholder="Category"
+                aria-label="Category" />
+                <script>
+                    $("#MCPart").autocomplete({
+                        source: '{%url 'MCpartAutocomplete'%}'
+                                    });
+                </script>
+                <input type="text" id="MCDef" name="MCDef" style="background-color: white; color:black" placeholder="Section"
+                aria-label="Section" />
+                <script>
+                    $("#MCDef").autocomplete({
+                        source: '{%url 'MCdefAutocomplete'%}'
+                                        });
+                </script>
+                <br>
+                    <input type="submit" value="MC Search" style="background-color: lightcoral; color:black" />
                 </form></th>
             </tr>
         </thead>
@@ -110,7 +142,7 @@ Home
 </div>
 <div class='center'>
     {%if RolStock%}
-<h3>{{RolStock}}: Failure Cases Breakup for {%if PartDisplay %}{{PartDisplay}}{%endif%} from {{from}} to {{to}}</h3>
+<h3>{{RolStock}}: Failure Cases Breakup for {%if PartDisplay %}{{PartDisplay}}{%endif%} {%if SectionDisplay %} belonging to {{SectionDisplay}} Section{%endif%} from {{from}} to {{to}}</h3>
 {%endif%}
 <canvas  id="myChart" width="40" height="16"></canvas>
 </div>
@@ -152,6 +184,71 @@ Home
     });
 </script>
 
+{%if RolStock == 'TC'%}
+<div class="center">
+    <div style="flex-grow: 8; background-color:DodgerBlue;">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>S.No</th>
+                    <th>Rolling Stock</th>
+                        <th>Category</th>
+                        <th>Section</th>
+                        
+                        <th>Details</th>
+                        <th>Status</th>
+                </tr>
+            </thead>
+    
+            <tbody>
+                {%for obj in q %}
+                <tr class='danger'>
+                    <td class='text-primary'>{{forloop.counter}}</td>
+                    <td class='text-primary'>{{obj.TCName}}</td>
+                    <td class='text-primary'>{{obj.TCDefArea}}</td>
+                        <td class='text-primary'>{{obj.TCSecArea}}</td>
+                        <td class='text-primary'>{{obj.TCDef}}</td>
+                        <td class='text-primary'>{{obj.TCStatus}}</td>
+                </tr>
+                {%endfor%}
+            </tbody>
+    
+        </table>
+    </div>
+    {%endif%}
+
+    {%if RolStock == 'MC'%}
+    <div class="center">
+        <div style="flex-grow: 8; background-color:DodgerBlue;">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>S.No</th>
+                        <th>Rolling Stock</th>
+                            <th>Category</th>
+                            <th>Section</th>
+                            
+                            <th>Details</th>
+                            <th>Status</th>
+                    </tr>
+                </thead>
+        
+                <tbody>
+                    {%for obj in q %}
+                    <tr class='danger'>
+                        <td class='text-primary'>{{forloop.counter}}</td>
+                        <td class='text-primary'>{{obj.MCName}}</td>
+                        <td class='text-primary'>{{obj.MCDefArea}}</td>
+                            <td class='text-primary'>{{obj.MCSecArea}}</td>
+                            <td class='text-primary'>{{obj.MCDef}}</td>
+                            <td class='text-primary'>{{obj.MCStatus}}</td>
+                    </tr>
+                    {%endfor%}
+                </tbody>
+        
+            </table>
+        </div>
+        {%endif%}
 {%endblock content%}
 {%block afterbody%}
 
