--- a/templates/charts/nav.html
+++ b/templates/charts/nav.html
@@ -5,7 +5,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand"
     style="color:rgb(255, 255, 255); font-weight: 500; font-size: 32px; margin-right:0px; margin-top:0px;"
-    href="{% url 'home'%}"></a>
+    href="{% url 'home'%}">It Solves a Purpose</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
